updated some print statements to use the logger instead
Signed-off-by: JasonLi1909 <jasli1909@gmail.com>

--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +250,7 @@
     "\n",
     "            # Log metrics from rank 0 only to avoid duplicate outputs\n",
     "            if world_rank == 0:\n",
-    "                print(metrics)\n",
+    "                logger.info(metrics)\n",
     "    \n",
     "    # Step 9: Export memory profiling results\n",
     "    run_name = ray.train.get_context().get_experiment_name()\n",
@@ -722,7 +722,6 @@
    "outputs": [],
    "source": [
     "# Initialize the same model architecture for inference\n",
-    "print(\"Loading trained model for inference...\")\n",
     "model = init_model()\n",
     "\n",
     "# Load the trained weights \n",
