--- a/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "Reasoning models often separate *reasoning* from the *final answer* using tags like `<think>...</think>`. Without a proper parser, this reasoning may end up in the `content` field instead of the dedicated `reasoning_content` field.\n",
     "\n",
-    "To extract reasoning correctly, configure a `reasoning_parser` in your Ray Serve deployment. This tells vLLM how to isolate the model’s thought process from the rest of the output.\n",
+    "To extract reasoning correctly, configure a `reasoning_parser` in your Ray Serve deployment. This tells vLLM how to isolate the model’s thought process from the rest of the output.  \n",
     "**Note:** For example, *QwQ* uses the `deepseek-r1` parser. Other models may require different parsers. See the [vLLM docs](https://docs.vllm.ai/en/stable/features/reasoning_outputs.html#supported-models) or your model's documentation to find a supported parser, or [build your own](https://docs.vllm.ai/en/stable/features/reasoning_outputs.html#how-to-support-a-new-reasoning-model) if needed.\n",
     "\n",
     "```yaml\n",
@@ -129,7 +129,7 @@
    "id": "d515e268",
    "metadata": {},
    "source": [
-    "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs: production guide](https://docs.ray.io/en/latest/serve/llm/serving-llms.html#production-deployment) for an example.\n",
+    "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs - Quickstart Examples: Production Guide](https://docs.ray.io/en/latest/serve/llm/quick-start.html#production-deployment) for an example.\n",
     "\n",
     "---\n",
     "\n",
@@ -194,10 +194,7 @@
     "curl -X POST http://localhost:8000/v1/chat/completions \\\n",
     "  -H \"Authorization: Bearer FAKE_KEY\" \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
-    "  -d '{ \\\n",
-    "        \"model\": \"my-qwq-32B\", \\\n",
-    "        \"messages\": [{\"role\": \"user\", \"content\": \"Pick three random words with 3 syllables each and count the number of R'\\''s in each of them\"}] \\\n",
-    "      }'"
+    "  -d '{ \"model\": \"my-qwq-32B\", \"messages\": [{\"role\": \"user\", \"content\": \"Pick three random words with 3 syllables each and count the number of R'\\''s in each of them\"}] }'"
    ]
   },
   {
@@ -290,8 +287,8 @@
     "from urllib.parse import urljoin\n",
     "from openai import OpenAI\n",
     "\n",
-    "api_key = <YOUR-TOKEN-HERE>\n",
-    "base_url = <YOUR-ENDPOINT-HERE>\n",
+    "api_key = \"FAKE_KEY\"\n",
+    "base_url = \"http://localhost:8000\"\n",
     "\n",
     "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
     "\n",
