--- a/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/hybrid-reasoning-llm/notebook.ipynb
@@ -67,7 +67,7 @@
     "\n",
     "In thinking mode, hybrid models often separate _reasoning_ from the _final answer_ using tags like `<think>...</think>`. Without a proper parser, this reasoning may end up in the `content` field instead of the dedicated `reasoning_content` field.  \n",
     "\n",
-    "To ensure that Ray Serve LLM correctly parses the reasoning output, configure a `reasoning_parser` in your Ray Serve LLM deployment. This tells vLLM how to isolate the model’s thought process from the rest of the output.\n",
+    "To ensure that Ray Serve LLM correctly parses the reasoning output, configure a `reasoning_parser` in your Ray Serve LLM deployment. This tells vLLM how to isolate the model’s thought process from the rest of the output.  \n",
     "**Note:** For example, *Qwen-3* uses the `qwen3` parser. See the [vLLM docs](https://docs.vllm.ai/en/stable/features/reasoning_outputs.html#supported-models) or your model's documentation to find a supported parser, or [build your own](https://docs.vllm.ai/en/stable/features/reasoning_outputs.html#how-to-support-a-new-reasoning-model) if needed.\n",
     "\n",
     "```yaml\n",
@@ -154,7 +154,7 @@
    "id": "32272280",
    "metadata": {},
    "source": [
-    "**Note:** Before moving to a production setup, migrate your settings to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs: Production Guide](https://docs.ray.io/en/latest/serve/llm/serving-llms.html#production-deployment) for an example.\n",
+    "**Note:** Before moving to a production setup, migrate your settings to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs - Quickstart Examples: Production Guide](https://docs.ray.io/en/latest/serve/llm/quick-start.html#production-deployment) for an example.\n",
     "\n",
     "---\n",
     "\n",
@@ -294,10 +294,7 @@
     "curl -X POST http://localhost:8000/v1/chat/completions \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
     "  -H \"Authorization: Bearer FAKE_KEY\" \\\n",
-    "  -d '{ \\\n",
-    "        \"model\": \"my-qwen-3-32b\", \\\n",
-    "        \"messages\": [{\"role\": \"user\", \"content\": \"What is greater between 7.8 and 7.11 ? /think\"}] \\\n",
-    "      }'"
+    "  -d '{ \"model\": \"my-qwen-3-32b\", \"messages\": [{\"role\": \"user\", \"content\": \"What is greater between 7.8 and 7.11 ? /think\"}] }'"
    ]
   },
   {
@@ -389,25 +386,6 @@
    "outputs": [],
    "source": [
     "#client_streaming.py\n",
-    "from urllib.parse import urljoin\n",
-    "from openai import OpenAI\n",
-    "\n",
-    "api_key = \"FAKE_KEY\"\n",
-    "base_url = \"http://localhost:8000\"\n",
-    "\n",
-    "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
-    "\n",
-    "# Example: Complex query with thinking process\n",
-    "response = client.chat.completions.create(\n",
-    "    model=\"my-qwen-3-32b\",\n",
-    "    messages=[\n",
-    "        {\"role\": \"user\", \"content\": \"What's the capital of France ?\"}\n",
-    "    ],\n",
-    "    extra_body={\"chat_template_kwargs\": {\"enable_thinking\": True}}\n",
-    ")\n",
-    "\n",
-    "print(f\"Reasoning: \\n{response.choices[0].message.reasoning_content}\\n\\n\")\n",
-    "print(f\"Answer: \\n {response.choices[0].message.content}\")\n",
     "from urllib.parse import urljoin\n",
     "from openai import OpenAI\n",
     "\n",
