--- a/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
@@ -59,7 +59,7 @@
    "id": "b17a7140",
    "metadata": {},
    "source": [
-    "**Note:** Before moving to a production setup, migrate to using a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs: Production Guide](https://docs.ray.io/en/latest/serve/llm/serving-llms.html#production-deployment) for an example.\n",
+    "**Note:** Before moving to a production setup, migrate to using a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs - Quickstart Examples: Production Guide](https://docs.ray.io/en/latest/serve/llm/quick-start.html#production-deployment) for an example.\n",
     "\n",
     "---\n",
     "\n",
@@ -125,10 +125,7 @@
     "curl -X POST http://localhost:8000/v1/chat/completions \\\n",
     "  -H \"Authorization: Bearer FAKE_KEY\" \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
-    "  -d '{ \\\n",
-    "        \"model\": \"my-llama-3.1-8b\", \\\n",
-    "        \"messages\": [{\"role\": \"user\", \"content\": \"What is 2 + 2?\"}] \\\n",
-    "      }'"
+    "  -d '{ \"model\": \"my-llama-3.1-8b\", \"messages\": [{\"role\": \"user\", \"content\": \"What is 2 + 2?\"}] }'"
    ]
   },
   {
