--- a/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
@@ -56,7 +56,7 @@
             "id": "c76a6362",
             "metadata": {},
             "source": [
-                "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs: production guide](https://docs.ray.io/en/latest/serve/llm/serving-llms.html#production-deployment) for an example.\n",
+                "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs - Quickstart Examples: Production Guide](https://docs.ray.io/en/latest/serve/llm/quick-start.html#production-deployment) for an example.\n",
                 "\n",
                 "---\n",
                 "\n",
@@ -121,20 +121,7 @@
                 "curl -X POST http://localhost:8000/v1/chat/completions \\\n",
                 "  -H \"Authorization: Bearer FAKE_KEY\" \\\n",
                 "  -H \"Content-Type: application/json\" \\\n",
-                "  -d '{ \\\n",
-                "        \"model\": \"my-qwen-VL\", \\\n",
-                "        \"messages\": [ \\\n",
-                "          { \\\n",
-                "            \"role\": \"user\", \\\n",
-                "            \"content\": [ \\\n",
-                "              {\"type\": \"text\", \"text\": \"What do you see in this image?\"}, \\\n",
-                "              {\"type\": \"image_url\", \"image_url\": { \\\n",
-                "                \"url\": \"http://images.cocodataset.org/val2017/000000039769.jpg\" \\\n",
-                "              }} \\\n",
-                "            ] \\\n",
-                "          } \\\n",
-                "        ] \\\n",
-                "      }'"
+                "  -d '{ \"model\": \"my-qwen-VL\", \"messages\": [ { \"role\": \"user\", \"content\": [ {\"type\": \"text\", \"text\": \"What do you see in this image?\"}, {\"type\": \"image_url\", \"image_url\": { \"url\": \"http://images.cocodataset.org/val2017/000000039769.jpg\" }} ] } ] }'"
             ]
         },
         {
