--- a/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
@@ -148,10 +148,10 @@
     "from urllib.parse import urljoin\n",
     "from openai import OpenAI\n",
     "\n",
-    "api_key = \"FAKE_KEY\"\n",
-    "base_url = \"http://localhost:8000\"\n",
+    "API_KEY = \"FAKE_KEY\"\n",
+    "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
+    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-llama-3.1-8b\",\n",
