--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -344,11 +344,11 @@
     "<div style=\"display: flex; gap: 40px; align-items: flex-start;\">\n",
     "  <div style=\"text-align: center;\">\n",
     "    <h3>Without CPU Offloading</h3>\n",
-    "    <img src=\"images/gpu_memory_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/gpu_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "  <div style=\"text-align: center;\">\n",
     "    <h3>With CPU Offloading</h3>\n",
-    "    <img src=\"images/cpu_offload_profile.png\" width=\"600\"/>\n",
+    "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/cpu_offload_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n",
     "Note: The above images are generated using PyTorch's Memory Profiler, which is covered later in this tutorial.\n",
