--- a/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/vision-llm/notebook.ipynb
@@ -5,7 +5,7 @@
             "id": "23243c2e",
             "metadata": {},
             "source": [
-                "# Deploying a vision LLM\n",
+                "# Deploy a vision LLM\n",
                 "\n",
                 "A vision LLM can interpret images as well as text, enabling tasks like answering questions about charts, analyzing photos, or combining visuals with instructions. It extends LLMs beyond language to support multimodal reasoning and richer applications.  \n",
                 "\n",
@@ -56,7 +56,7 @@
             "id": "c76a6362",
             "metadata": {},
             "source": [
-                "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs: production guide](https://docs.ray.io/en/latest/serve/llm/serving-llms.html#production-deployment) for an example.\n",
+                "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs - Quickstart Examples: Production Guide](https://docs.ray.io/en/latest/serve/llm/quick-start.html#production-deployment) for an example.\n",
                 "\n",
                 "---\n",
                 "\n",
@@ -143,10 +143,10 @@
                 "from urllib.parse import urljoin\n",
                 "from openai import OpenAI\n",
                 "\n",
-                "api_key = \"FAKE_KEY\"\n",
-                "base_url = \"http://localhost:8000\"\n",
+                "API_KEY = \"FAKE_KEY\"\n",
+                "BASE_URL = \"http://localhost:8000\"\n",
                 "\n",
-                "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
+                "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
                 "\n",
                 "response = client.chat.completions.create(\n",
                 "    model=\"my-qwen-VL\",\n",
@@ -189,10 +189,10 @@
                 "import base64\n",
                 "from openai import OpenAI\n",
                 "\n",
-                "api_key = \"FAKE_KEY\"\n",
-                "base_url = \"http://localhost:8000\"\n",
+                "API_KEY = \"FAKE_KEY\"\n",
+                "BASE_URL = \"http://localhost:8000\"\n",
                 "\n",
-                "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
+                "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
                 "\n",
                 "### From an image locally saved as `example.jpg`\n",
                 "# Load and encode image as base64\n",
@@ -254,7 +254,7 @@
                 "\n",
                 "## Deploy to production with Anyscale services\n",
                 "\n",
-                "For production, it's recommended to use Anyscale services to deploy your Ray Serve app on a dedicated cluster without code changes. Anyscale provides scalability, fault tolerance, and load balancing, ensuring resilience against node failures, high traffic, and rolling updates. See [Deploying a small-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/small-size-llm/README.html#deploy-to-production-with-anyscale-services) for an example with a small-sized model like the *Qwen2.5-VL-7&nbsp;B-Instruct* used in this tutorial.\n",
+                "For production, it's recommended to use Anyscale services to deploy your Ray Serve app on a dedicated cluster without code changes. Anyscale provides scalability, fault tolerance, and load balancing, ensuring resilience against node failures, high traffic, and rolling updates. See [Deploy a small-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/small-size-llm/README.html#deploy-to-production-with-anyscale-services) for an example with a small-sized model like the *Qwen2.5-VL-7&nbsp;B-Instruct* used in this tutorial.\n",
                 "\n",
                 "---\n",
                 "\n",
