--- a/doc/source/serve/tutorials/deployment-serve-llm/large-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/large-size-llm/notebook.ipynb
@@ -71,7 +71,7 @@
    "id": "6b2231a5",
    "metadata": {},
    "source": [
-    "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs: Production Guide](https://docs.ray.io/en/latest/serve/llm/serving-llms.html#production-deployment) for an example.\n",
+    "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs - Quickstart Examples: Production Guide](https://docs.ray.io/en/latest/serve/llm/quick-start.html#production-deployment) for an example.\n",
     "\n",
     "---\n",
     "\n",
@@ -160,10 +160,10 @@
     "from urllib.parse import urljoin\n",
     "from openai import OpenAI\n",
     "\n",
-    "api_key = \"FAKE_KEY\"\n",
-    "base_url = \"http://localhost:8000\"\n",
+    "API_KEY = \"FAKE_KEY\"\n",
+    "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
+    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-deepseek-r1\",\n",
@@ -227,7 +227,7 @@
     "\n",
     "The following template runs only on H100 GPUs in your self-hosted Anyscale cloud, as H100s aren't available in Anyscale’s public cloud. This example uses two nodes of type *8xH100-80&nbsp;GB:208CPU-1830&nbsp;GB* on an AWS cloud.\n",
     "\n",
-    "To provision nodes with 1000 GB of disk capacity, see [Changing the default disk size for GCP clusters](https://docs.anyscale.com/configuration/compute/gcp/#changing-the-default-disk-size) for Google Cloud Platform (GCP) or [Changing the default disk size for AWS clusters](https://docs.anyscale.com/configuration/compute/aws/#changing-the-default-disk-size) for Amazon Web Services (AWS). \n",
+    "To provision nodes with 1000 GB of disk capacity, see [Changing the default disk size for GCP clusters](https://docs.anyscale.com/configuration/compute/gcp#disk-size) for Google Cloud Platform (GCP) or [Changing the default disk size for AWS clusters](https://docs.anyscale.com/configuration/compute/aws#disk-size) for Amazon Web Services (AWS). \n",
     "\n",
     "---\n",
     "\n",
