--- a/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/reasoning-llm/notebook.ipynb
@@ -40,7 +40,7 @@
     "\n",
     "Reasoning models often separate *reasoning* from the *final answer* using tags like `<think>...</think>`. Without a proper parser, this reasoning may end up in the `content` field instead of the dedicated `reasoning_content` field.\n",
     "\n",
-    "To extract reasoning correctly, configure a `reasoning_parser` in your Ray Serve deployment. This tells vLLM how to isolate the model’s thought process from the rest of the output.\n",
+    "To extract reasoning correctly, configure a `reasoning_parser` in your Ray Serve deployment. This tells vLLM how to isolate the model’s thought process from the rest of the output.  \n",
     "**Note:** For example, *QwQ* uses the `deepseek-r1` parser. Other models may require different parsers. See the [vLLM docs](https://docs.vllm.ai/en/stable/features/reasoning_outputs.html#supported-models) or your model's documentation to find a supported parser, or [build your own](https://docs.vllm.ai/en/stable/features/reasoning_outputs.html#how-to-support-a-new-reasoning-model) if needed.\n",
     "\n",
     "```yaml\n",
@@ -129,7 +129,7 @@
    "id": "d515e268",
    "metadata": {},
    "source": [
-    "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs: production guide](https://docs.ray.io/en/latest/serve/llm/serving-llms.html#production-deployment) for an example.\n",
+    "**Note:** Before moving to a production setup, migrate to a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs - Quickstart Examples: Production Guide](https://docs.ray.io/en/latest/serve/llm/quick-start.html#production-deployment) for an example.\n",
     "\n",
     "---\n",
     "\n",
@@ -216,10 +216,10 @@
     "from urllib.parse import urljoin\n",
     "from openai import OpenAI\n",
     "\n",
-    "api_key = \"FAKE_KEY\"\n",
-    "base_url = \"http://localhost:8000\"\n",
+    "API_KEY = \"FAKE_KEY\"\n",
+    "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
+    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-qwq-32B\",\n",
@@ -267,7 +267,7 @@
     "\n",
     "## Deploy to production with Anyscale services\n",
     "\n",
-    "For production, use Anyscale services to deploy your Ray Serve app on a dedicated cluster without code changes. Anyscale provides scalability, fault tolerance, and load balancing, ensuring resilience against node failures, high traffic, and rolling updates. See [Deploying a medium-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/medium-size-llm/README.html#deploy-to-production-with-anyscale-services) for an example with a medium-sized model like the *QwQ-32&nbsp;B* used here.\n",
+    "For production, use Anyscale services to deploy your Ray Serve app on a dedicated cluster without code changes. Anyscale provides scalability, fault tolerance, and load balancing, ensuring resilience against node failures, high traffic, and rolling updates. See [Deploy a medium-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/medium-size-llm/README.html#deploy-to-production-with-anyscale-services) for an example with a medium-sized model like the *QwQ-32&nbsp;B* used here.\n",
     "\n",
     "---\n",
     "\n",
@@ -287,10 +287,10 @@
     "from urllib.parse import urljoin\n",
     "from openai import OpenAI\n",
     "\n",
-    "api_key = <YOUR-TOKEN-HERE>\n",
-    "base_url = <YOUR-ENDPOINT-HERE>\n",
+    "API_KEY = \"FAKE_KEY\"\n",
+    "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
+    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
     "\n",
     "# Example: Complex query with thinking process\n",
     "response = client.chat.completions.create(\n",
