--- a/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
+++ b/doc/source/serve/tutorials/deployment-serve-llm/small-size-llm/notebook.ipynb
@@ -10,7 +10,7 @@
     "A small LLM runs on a single node with 1–2 GPUs, making it fast, inexpensive, and simple to use. It’s ideal for prototyping, lightweight applications, latency-critical use cases, cost-sensitive deployments, and environments with limited resources where efficiency matters more than peak accuracy.\n",
     "\n",
     "\n",
-    "For larger models, see [Deploying a medium-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/medium-size-llm/README.html) or [Deploying a large-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/large-size-llm/README.html).\n",
+    "For larger models, see [Deploy a medium-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/medium-size-llm/README.html) or [Deploy a large-sized LLM](https://docs.ray.io/en/latest/serve/tutorials/deployment-serve-llm/large-size-llm/README.html).\n",
     "\n",
     "---\n",
     "\n",
@@ -59,7 +59,7 @@
    "id": "b17a7140",
    "metadata": {},
    "source": [
-    "**Note:** Before moving to a production setup, migrate to using a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs: Production Guide](https://docs.ray.io/en/latest/serve/llm/serving-llms.html#production-deployment) for an example.\n",
+    "**Note:** Before moving to a production setup, migrate to using a [Serve config file](https://docs.ray.io/en/latest/serve/production-guide/config.html) to make your deployment version-controlled, reproducible, and easier to maintain for CI/CD pipelines. See [Serving LLMs - Quickstart Examples: Production Guide](https://docs.ray.io/en/latest/serve/llm/quick-start.html#production-deployment) for an example.\n",
     "\n",
     "---\n",
     "\n",
@@ -148,10 +148,10 @@
     "from urllib.parse import urljoin\n",
     "from openai import OpenAI\n",
     "\n",
-    "api_key = \"FAKE_KEY\"\n",
-    "base_url = \"http://localhost:8000\"\n",
+    "API_KEY = \"FAKE_KEY\"\n",
+    "BASE_URL = \"http://localhost:8000\"\n",
     "\n",
-    "client = OpenAI(base_url=urljoin(base_url, \"v1\"), api_key=api_key)\n",
+    "client = OpenAI(BASE_URL=urljoin(BASE_URL, \"v1\"), API_KEY=API_KEY)\n",
     "\n",
     "response = client.chat.completions.create(\n",
     "    model=\"my-llama-3.1-8b\",\n",
