--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting Started with PyTorch Fully Sharded Data Parallel (FSDP2) and Ray Train\n",
+    "# Get started with PyTorch Fully Sharded Data Parallel (FSDP2) and Ray Train\n",
     "\n",
     "**Time to complete:** 30 min\n",
     "\n",
