--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -20,7 +20,7 @@
     "- GPU memory profiling with PyTorch Profiler\n",
     "- Loading a distributed model for inference\n",
     "\n",
-    "**Note:** This notebook uses FSDP2's `fully_sharded` API. If you are currently using FSDP1's `FullyShardedDataParallel`, consider migrating to FSDP2 for improved performance and features such as lower memory usage and `DTensor` integration. "
+    "**Note:** This notebook uses FSDP2's `fully_sharded` API. If you're using FSDP1's `FullyShardedDataParallel`, consider migrating to FSDP2 for improved performance and features such as lower memory usage and `DTensor` integration. "
    ]
   },
   {
