--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -165,7 +165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Define the Training Function\n",
+    "## 2. Define the training function\n",
     "\n",
     "Below is the main training function that orchestrates the FSDP2 training process. In the following sections, each of the helper functions used within this training loop are implemented. First, the necessary imports for the training function are made."
    ]
