--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -167,7 +167,7 @@
    "source": [
     "## 2. Define the training function\n",
     "\n",
-    "Below is the main training function that orchestrates the FSDP2 training process. In the following sections, each of the helper functions used within this training loop are implemented. First, the necessary imports for the training function are made."
+    "Below is the main training function that orchestrates the FSDP2 training process. The following sections implement each of the helper functions used in this training loop. First, make the necessary imports for the training function:"
    ]
   },
   {
