--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -264,7 +264,7 @@
     "                train_loader.sampler.set_epoch(epoch)\n",
     "\n",
     "            for images, labels in train_loader:\n",
-    "                # Note: Data is automatically moved to the correct device by prepare_data_loader\n",
+    "                # Note: prepare_data_loader automatically moves data to the correct device\n",
     "                outputs = model(images)\n",
     "                loss = criterion(outputs, labels)\n",
     "                \n",
