--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -312,7 +312,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Model Sharding with FSDP2\n",
+    "## 3. Model sharding with FSDP2\n",
     "\n",
     "PyTorch's `fully_shard` enables sharding at various granularities. At the most granular level, every layer can be sharded to minimize peak memory utilization, but this also increases communication costs between Ray Train workers. Experiment with different sharding granularities to find the optimal balance for your use case. In this demo, only the encoder blocks are sharded—the largest layers in the Vision Transformer.\n",
     "\n",
