--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -791,7 +791,7 @@
    "metadata": {},
    "source": [
     "### Post Training Directory View\n",
-    "When training on the Anyscale platform, the checkpoint shards, full model, and memory profiling reports are saved in the Anyscale cluster storage with the following layout:"
+    "The Anyscale platform saves the checkpoint shards, full model, and memory profiling reports in cluster storage with the following layout:"
    ]
   },
   {
