--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -822,7 +822,7 @@
    "source": [
     "## 7. Loading the Trained Model for Inference\n",
     "\n",
-    "After training completes, the saved model can be loaded for inference on new data. The model is loaded in its unsharded form, ready for standard PyTorch inference."
+    "After training completes, you can load the saved model for inference on new data. Ray Train loads the model in its unsharded form, ready for standard PyTorch inference."
    ]
   },
   {
