--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -893,7 +893,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "In this tutorial, you: \n",
+    "In this tutorial, you did the following: \n",
     "\n",
     "- Trained an image classification model using FSDP2 and Ray Train\n",
     "- Learned how to load and save distributed checkpoints with PyTorch DCP\n",
