--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -898,7 +898,7 @@
     "- Trained an image classification model using FSDP2 and Ray Train\n",
     "- Learned how to load and save distributed checkpoints with PyTorch DCP\n",
     "- Gained insight on configuring FSDP2 to balance training performance and memory usage\n",
-    "- Unlocked multi-node GPU memory observability with PyTorch Profiler"
+    "- Unlocked multi-node GPU memory observability with PyTorch Memory Profiler"
    ]
   }
  ],
