--- a/doc/source/ray-overview/examples/entity-recognition-with-llms/README.ipynb
+++ b/doc/source/ray-overview/examples/entity-recognition-with-llms/README.ipynb
@@ -76,12 +76,7 @@
    "source": [
     "%%bash\n",
     "# Install dependencies\n",
-    "pip install -q \\\n",
-    "    \"xgrammar==0.1.11\" \\\n",
-    "    \"pynvml==12.0.0\" \\\n",
-    "    \"hf_transfer==0.1.9\" \\\n",
-    "    \"tensorboard==2.19.0\" \\\n",
-    "    \"llamafactory@git+https://github.com/hiyouga/LLaMA-Factory.git@ac8c6fdd3ab7fb6372f231f238e6b8ba6a17eb16#egg=llamafactory\""
+    "uv pip sync llm_example_py311_cu128.lock --system --index-strategy unsafe-best-match"
    ]
   },
   {
