uv pip sync on root directory
Signed-off-by: elliot-barn <elliot.barnwell@anyscale.com>

--- a/doc/source/ray-overview/examples/e2e-audio/README.ipynb
+++ b/doc/source/ray-overview/examples/e2e-audio/README.ipynb
@@ -31,15 +31,26 @@
     "\n",
     "## Prerequisites\n",
     "\n",
-    "Install the dependencies using:\n",
-    "\n",
-    "```bash\n",
-    "pip install -r requirements.txt\n",
-    "```\n",
+    "Install the dependencies using:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "uv pip sync llm_example_py311_cu128.lock --system --index-strategy unsafe-best-match"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Setup\n",
     "\n",
     "This tutorial runs on a cluster with five L4 GPU worker nodes.\n",
-    "\n",
-    "## Setup\n",
     "\n",
     "First, import the necessary modules:"
    ]
