Address comments part 5
Signed-off-by: Arthur Leung <arcyleung@gmail.com>

--- a/doc/source/ray-overview/examples/mcp-ray-serve/04 Deploy_multiple_mcp_stdio_docker_images_with_ray_serve.ipynb
+++ b/doc/source/ray-overview/examples/mcp-ray-serve/04 Deploy_multiple_mcp_stdio_docker_images_with_ray_serve.ipynb
@@ -186,7 +186,7 @@
     "    return MCP\n",
     "\n",
     "# -------------------------\n",
-    "# HTTP router code \n",
+    "# HTTP router code\n",
     "# -------------------------\n",
     "\n",
     "api = FastAPI()\n",
@@ -244,7 +244,7 @@
     "    autoscaling_config={\n",
     "        \"min_replicas\": 1,\n",
     "        \"max_replicas\": 5,\n",
-    "        \"target_num_ongoing_requests_per_replica\": 10,\n",
+    "        \"target_ongoing_requests\": 10,\n",
     "    },\n",
     ")\n",
     "\n",
