--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -316,7 +316,7 @@
     "\n",
     "PyTorch's `fully_shard` enables sharding at various granularities. At the most granular level, you can shard every layer to minimize peak memory utilization, but this also increases communication costs between Ray Train workers. Experiment with different sharding granularities to find the optimal balance for your use case. This example only shards the encoder blocks—the largest layers in the Vision Transformer.\n",
     "\n",
-    "Beyond sharding granularity, FSDP2 offers several configuration options to optimize performance and mitigate out-of-memory (OOM) errors:\n",
+    "Beyond sharding granularity, FSDP2 offers several configuration options to optimize performance and mitigate OOM errors:\n",
     "\n",
     "### 3a. Device Mesh Configuration\n",
     "\n",
