--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -318,7 +318,7 @@
     "\n",
     "Beyond sharding granularity, FSDP2 offers several configuration options to optimize performance and mitigate OOM errors:\n",
     "\n",
-    "### 3a. Device Mesh Configuration\n",
+    "### Device mesh configuration\n",
     "\n",
     "`init_device_mesh` configures a `DeviceMesh` that describes the training run's device topology. This demo uses a simple 1D mesh for data parallelism, but `DeviceMesh` also supports multi-dimensional parallelism approaches including tensor parallelism and pipeline parallelism. In many cases, integrating several types of parallelism can further help to improve training performance.\n",
     "\n",
