--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -335,7 +335,7 @@
     "\n",
     "**When to use CPU offloading:**\n",
     "- When GPU memory is constrained\n",
-    "- For very large models that do not fit in GPU memory\n",
+    "- For very large models that don't fit in GPU memory\n",
     "\n",
     "**When not to use CPU offloading:**\n",
     "- When CPU memory is limited (can cause CPU crashes due to out-of-memory error)\n",
