--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -329,7 +329,7 @@
     "CPU offloading reduces GPU memory footprint by storing model components in the CPU. However, this comes with the trade-off of increased data transfer overhead between CPU and GPU during computation.\n",
     "\n",
     "**CPU offloading does the following:**\n",
-    "- Sharded parameters, gradients, and optimizer states are stored on CPU\n",
+    "- Stores sharded parameters, gradients, and optimizer states on CPU\n",
     "- Sharded parameters are copied to GPU during forward/backward computation and freed after use\n",
     "- Computed gradients are copied to the CPU where the optimizer step is computed\n",
     "\n",
