--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -330,7 +330,7 @@
     "\n",
     "**CPU offloading does the following:**\n",
     "- Stores sharded parameters, gradients, and optimizer states on CPU\n",
-    "- Sharded parameters are copied to GPU during forward/backward computation and freed after use\n",
+    "- Copies sharded parameters to GPU during forward/backward computation and frees them after use\n",
     "- Computed gradients are copied to the CPU where the optimizer step is computed\n",
     "\n",
     "**When to use CPU offloading:**\n",
