--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -331,7 +331,7 @@
     "**CPU offloading does the following:**\n",
     "- Stores sharded parameters, gradients, and optimizer states on CPU\n",
     "- Copies sharded parameters to GPU during forward/backward computation and frees them after use\n",
-    "- Computed gradients are copied to the CPU where the optimizer step is computed\n",
+    "- Copies computed gradients to the CPU where PyTorch computes the optimizer step\n",
     "\n",
     "**When to use CPU offloading:**\n",
     "- When GPU memory is constrained\n",
