--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -337,7 +337,7 @@
     "- When GPU memory is constrained\n",
     "- For very large models that don't fit in GPU memory\n",
     "\n",
-    "**When not to use CPU offloading:**\n",
+    "**Don't use CPU offloading in the following cases:**\n",
     "- When CPU memory is limited (can cause CPU crashes due to out-of-memory error)\n",
     "- When training speed is more important than memory usage\n",
     "\n",
