--- a/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
+++ b/doc/source/train/examples/pytorch/pytorch-fsdp/README.ipynb
@@ -347,7 +347,7 @@
     "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/gpu_memory_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "  <div style=\"text-align: center;\">\n",
-    "    <h3>With CPU Offloading</h3>\n",
+    "    <h3>With CPU offloading</h3>\n",
     "    <img src=\"https://raw.githubusercontent.com/ray-project/ray/master/doc/source/train/examples/pytorch/pytorch-fsdp/images/cpu_offload_profile.png\" width=\"600\"/>\n",
     "  </div>\n",
     "</div>\n",
